# django-htmx-todos

./: pyproject.toml
htmx_project/: manage.py
htmx_project/htmx_project/: asgi.py  settings.py  urls.py  wsgi.py
htmx_project/static/css/: styles.css
htmx_project/test_app/: admin.py  auth.py  models.py  urls.py  views.py
htmx_project/test_app/migrations/: 0001_initial.py  0002_todo.py  0003_alter_todo_completed_at.py
htmx_project/test_app/templates/: header.html  home.html  table.html  table_row.html  todo-form.html
